--- a/package.json
+++ b/package.json
@@ -632,6 +632,7 @@
     "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "lint:fix": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore .",
     "watch": "webpack --mode development --watch",
+    "rebuild-electron": "./node_modules/.bin/electron-rebuild --version 6.0.0",
     "test": "jest"
   },
   "devDependencies": {
@@ -650,6 +651,7 @@
     "@typescript-eslint/eslint-plugin": "2.18.0",
     "@typescript-eslint/parser": "2.18.0",
     "conventional-github-releaser": "3.1.3",
+    "electron-rebuild": "^1.10.0",
     "eslint": "6.8.0",
     "ini": "^1.3.5",
     "jest": "^25.0.0",
@@ -662,6 +664,7 @@
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
   "dependencies": {
+    "@types/pinyin": "^2.8.1",
     "esm": "^3.2.25",
     "fast-glob": "^3.0.0",
     "glob-gitignore": "^1.0.14",
@@ -674,6 +677,7 @@
     "limax": "^2.0.0",
     "lodash": "^4.17.11",
     "node-html-parser": "^1.1.16",
+    "nodejieba": "^2.4.0",
     "parse-gitignore": "^1.0.1",
     "po2json": "^1.0.0-alpha",
     "translation.js": "^0.7.8",
